--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "gdmuds",
-  "version": "1.2.0",
+  "version": "1.5.0",
   "author": "Glovecc <664037691@qq.com>",
   "description": "An electron-vue project",
   "license": null,
@@ -17,7 +17,7 @@
     "postinstall": ""
   },
   "build": {
-    "productName": "广医自动改卷系统",
+    "productName": "广医自动试卷生成系统",
     "appId": "com.junian.gdmu",
     "directories": {
       "output": "build"
